added swag docs for login handler
